# allerjeez

./: .dockerignore  .env.example  .gitignore  Dockerfile  PROGRESS.md  PROJECT.md  README.md  main.py  pyproject.toml  start.sh
app/: config.py  db.py  main.py
app/api/: health.py  scans.py  stats.py  users.py
app/models/: __init__.py  base.py  explanation.py  ingredient.py  scan.py  user.py
app/schemas/: llm_lookup.py  safety_report.py  user.py  vision.py
app/services/: explainer.py  ingredient_lookup.py  llm_ingredient_lookup.py  safety_report.py  vision.py
data/: additives.csv  allergens.csv  iarc_carcinogens.csv
eval/: README.md  bootstrap_labels.py  gold_labels.jsonl  results.md  run_eval.py
frontend/: streamlit_app.py
scripts/: ingest_ingredients.py
