[project]
name = "ingredient-safety"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "pydantic-settings>=2.14.1",
    "uvicorn[standard]>=0.48.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.15",
]
