[project]
name = "ingredient-safety"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.136.3",
    "google-genai>=2.7.0",
    "greenlet>=3.5.1",
    "httpx>=0.28.1",
    "pgvector>=0.4.2",
    "pillow>=12.2.0",
    "pydantic-settings>=2.14.1",
    "pydantic[email]>=2.13.4",
    "python-multipart>=0.0.30",
    "rapidfuzz>=3.14.5",
    "sqlalchemy[asyncio]>=2.0.50",
    "streamlit>=1.58.0",
    "uvicorn[standard]>=0.48.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.15",
]
